# syncplay-tauri

./: .gitignore  MILESTONE.md  Makefile  PHASE8_SUMMARY.md  PROGRESS.md  README.md  SUMMARY.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: app_commands.toml
src-tauri/permissions/autogenerated/: change_room.toml  connect_to_server.toml  detect_available_players.toml  disconnect_from_server.toml  get_config_path.toml  get_connection_status.toml  send_chat_message.toml  set_ready.toml  update_playlist.toml
src-tauri/src/: app_state.rs  main.rs
src-tauri/src/client/: chat.rs  local_state.rs  mod.rs  playlist.rs  ready.rs  state.rs  sync.rs  userlist.rs
src-tauri/src/commands/: chat.rs  config.rs  connection.rs  mod.rs  player.rs  playlist.rs  room.rs
src-tauri/src/config/: mod.rs  persistence.rs  settings.rs
src-tauri/src/network/: connection.rs  messages.rs  mod.rs  protocol.rs  tls.rs
src-tauri/src/player/: backend.rs  commands.rs  controller.rs  detection.rs  events.rs  mod.rs  mpc_web.rs  mplayer_slave.rs  mpv_backend.rs  mpv_ipc.rs  properties.rs  vlc_rc.rs
src/components/chat/: ChatPanel.tsx
src/components/connection/: ConnectionDialog.tsx
src/components/layout/: MainLayout.tsx
src/components/player/: PlayerStatus.tsx
src/components/playlist/: PlaylistPanel.tsx
src/components/settings/: SettingsDialog.tsx
src/components/users/: RoomManagerDialog.tsx  UserList.tsx
src/hooks/: useLiquidGlassEffect.ts  useWindowDrag.ts
src/services/: tauri.ts  theme.ts
src/store/: index.ts
src/types/: config.ts
