[package]
name = "syncplay-tauri"
version = "0.1.0"
description = "A Tauri-based Syncplay client"
authors = ["Syncplay Team"]
license = "Apache-2.0"
repository = "https://github.com/syncplay/syncplay-tauri"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = ["macos-private-api"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-store = "2.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.5"
rustls = "0.21"
tokio-rustls = "0.24"
rustls-native-certs = "0.6"
webpki-roots = "0.25"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
interprocess = "1.2"
config = "0.13"
futures = "0.3"
async-trait = "0.1"
parking_lot = "0.12"
chrono = "0.4"
regex = "1.10"
sha2 = "0.10"
shell-words = "1.1"
url = "2.5"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
urlencoding = "2.1"

[dev-dependencies]
tauri = { version = "2.9.5", features = ["test"] }
tempfile = "3.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
